Table SOURCE_SYSTEMS {
  source_system_id number [pk, increment]
  code varchar2(50) [not null]
  display_name varchar2(150) [not null]
  is_active char(1) [not null, default: 'Y']
  created_at timestamp [default: `SYSTIMESTAMP`]

  indexes {
    (code) [unique, name: 'source_systems_code_uk']
  }
}

Table PLAYERS {
  player_id number [pk, increment]
  full_name varchar2(150) [not null]
  date_of_birth date
  created_at timestamp [default: `SYSTIMESTAMP`]
  updated_at timestamp [default: `SYSTIMESTAMP`]
}

Table PLAYER_EXTERNAL_REFS {
  player_id number [not null]
  source_system_id number
  external_ref varchar2(50)
  linked_at timestamp [default: `SYSTIMESTAMP`]

  primary key (source_system_id, external_ref) [name: 'player_external_refs_pk']

  indexes {
    (player_id, source_system_id) [unique, name: 'player_source_uk']
    (player_id) [name: 'player_external_refs_player_idx']
  }
}

Table TOURNAMENTS {
  tournament_id number [pk, increment]
  source_system_id number [not null]
  external_ref varchar2(50) [not null]
  name varchar2(200) [not null]
  start_date date [not null]
  end_date date
  created_at timestamp [default: `SYSTIMESTAMP`]

  indexes {
    (source_system_id, external_ref) [unique, name: 'tournaments_external_ref_uk']
    (source_system_id, tournament_id) [unique, name: 'tournaments_source_tournament_uk']
  }
}

Table TOURNAMENT_PARTICIPANTS {
  tournament_id number
  player_id number
  seed_rating number(5)

  primary key (tournament_id, player_id) [name: 'tournament_participants_pk']
}

Table MATCHES {
  match_id number [pk, increment]
  tournament_id number
  white_id number [not null]
  black_id number [not null]
  result varchar2(10) [not null]
  played_on date [not null]
  source_system_id number [not null]
  external_ref varchar2(50)
  created_at timestamp [default: `SYSTIMESTAMP`]

  indexes {
    (tournament_id) [name: 'matches_tournament_idx']
    (white_id, black_id) [name: 'matches_players_idx']
    (played_on) [name: 'matches_played_on_idx']
  }
}

Table RATING_HISTORY {
  rating_history_id number [pk, increment]
  player_id number [not null]
  source_system_id number [not null]
  rating number(5) [not null]
  effective_date timestamp [not null]
  created_at timestamp [default: `SYSTIMESTAMP`]

  indexes {
    (player_id, source_system_id, effective_date) [unique, name: 'rating_history_player_source_effective_uk']
    (player_id, effective_date) [name: 'rating_history_player_date_idx']
  }
}


// Foreign keys

Ref: PLAYER_EXTERNAL_REFS.player_id > PLAYERS.player_id
Ref: PLAYER_EXTERNAL_REFS.source_system_id > SOURCE_SYSTEMS.source_system_id

Ref: TOURNAMENTS.source_system_id > SOURCE_SYSTEMS.source_system_id

Ref: TOURNAMENT_PARTICIPANTS.tournament_id > TOURNAMENTS.tournament_id
Ref: TOURNAMENT_PARTICIPANTS.player_id > PLAYERS.player_id

Ref: MATCHES.white_id > PLAYERS.player_id
Ref: MATCHES.black_id > PLAYERS.player_id
Ref: MATCHES.source_system_id > SOURCE_SYSTEMS.source_system_id

// Match tournament must belong to the same source system
Ref: MATCHES.(source_system_id, tournament_id) > TOURNAMENTS.(source_system_id, tournament_id)

Ref: RATING_HISTORY.player_id > PLAYERS.player_id
Ref: RATING_HISTORY.source_system_id > SOURCE_SYSTEMS.source_system_id
